--- a/bos_fore/.settings/org.eclipse.wst.common.component
+++ b/bos_fore/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,9 @@
         <dependent-module archiveName="bosUtils-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/bosUtils/bosUtils">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="Domain-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Domain/Domain">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="bos_fore"/>
         <property name="java-output-path" value="/bos_fore/target/classes"/>
     </wb-module>
